# self-driving-robot

./: README.md  readme.txt
autonomous-robot/: CMakeLists.txt  package.xml
autonomous-robot/src/: ImageProcessor.cpp  PIDController.h  sign_publisher.py
image_processor/: CMakeLists.txt  package.xml
image_processor/src/: image_processor.cpp  pid_controller.h  polynomial_fit.h  state_publisher.py
mycustomworld/: CMakeLists.txt  backupcourse.world  course.launch  course.world  package.xml  road.material
mycustomworld/models/forward/: forward.dae
mycustomworld/models/slow/: model.config  model.sdf  slow.dae
mycustomworld/models/stop/: stop.dae
world/: CMakeLists.txt  course.launch  course.world  package.xml
world/models/forward/: model.config  model.sdf
