<?xml version="1.0"?>
<package>
  <name>mycustomworld</name>
  <version>0.0.0</version>
  <description>The Roadrunner world</description>
  <maintainer email="seymurkafkas@gmail.com">Seymur Kafkas</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
